tests/paczka1/fuzzy1/18441588.err
Error in line 5: A242 A175 52,3
Error in line 18: A242 A242 16,8
